--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "framer-motion": "^12.26.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.30.3",
     "redux": "^5.0.0"
   },
   "devDependencies": {
